# Molecular-Simulations

./: EXAMPLES_TK.md  README.md  lennard_jones.ipynb  lennard_jones_NVT.ipynb  pyproject.toml  utils.py
data/: lj_mc_nvt_estimates.csv  lj_mc_nvt_snapshot.xyz  nvt_estimates.csv  viz.vmd
notebooks/: lj_MC_NVT_phase_diagram.ipynb  lj_MC_NVT_simulation.ipynb  lj_MD_NVE_study.ipynb  lj_NVT_simulation.ipynb  lj_md.ipynb
src/: lj_nvt.py
src/molecular_simulations/: lj_eos_kn.py  lj_mc_nvt.py  lj_md_nve.py  lj_nvt.py  sampling.py  utils.py
