[tool.poetry]
name = "molecular-simulations"
version = "0.1.0"
description = ""
authors = ["Alessio  <alessio.caciagli@okra.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
numba = "^0.57"
jupyterlab = "^4.0.10"
pandas = {version="^2.1", extras=["hdf5", "parquet", "feather", "spss", "excel"]}
ipykernel = "^6.29.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
ipykernel = "^6.29.0"
jupyterlab-code-formatter = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
